# xfce4-windowck-plugin

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  configure.ac.in  reloadPlugins.sh  reloadWBPlugin.sh  reloadWPlugin.sh
arch/: PKGBUILD.in
common/: Makefile.am  mypixmap.c  mypixmap.h  theme.c  theme.h  ui_style.c  ui_style.h  wck-plugin.c  wck-plugin.h  wck-utils.c  wck-utils.h
debian/: changelog  control  copyright  rules
icons/: Makefile.am
icons/48x48/: Makefile.am
panel-plugin/: Makefile.am  windowck-dialogs.c  windowck-dialogs.glade  windowck-dialogs.h  windowck-utils.c  windowck-utils.h  windowck.c  windowck.h  xfce4-windowck-plugin.desktop.in
panel-plugin/buttons/: Makefile.am  theme.c  theme.h  wckbuttons-dialogs.c  wckbuttons-dialogs.glade  wckbuttons-dialogs.h  wckbuttons-theme.c  wckbuttons-theme.h  wckbuttons.c  wckbuttons.desktop.in  wckbuttons.h
panel-plugin/title/: Makefile.am  windowck-dialogs.c  windowck-dialogs.glade  windowck-dialogs.h  windowck-plugin.desktop.in  windowck-title.c  windowck-title.h  windowck-utils.c  windowck-utils.h  windowck.c  windowck.h
po/: POTFILES.in  cs.po  fr.po  it.po  ru_RU.po  tr.po  xfce4-windowck-plugin.pot  zh_CN.po
themes/: Makefile.am
themes/elementary/: Makefile.am  README
themes/windowck/: Makefile.am  README  wckrc
themes/windowck-dark/: Makefile.am
themes/windowck-dark/unity/: Makefile.am  close_focused_normal.xpm  close_focused_prelight.xpm  close_focused_pressed.xpm  close_unfocused.xpm  generator.py  maximize_focused_normal.xpm  maximize_focused_prelight.xpm  maximize_focused_pressed.xpm  maximize_unfocused.xpm  menu_focused_normal.xpm  menu_focused_prelight.xpm  menu_focused_pressed.xpm  menu_unfocused.xpm  minimize_focused_normal.xpm  minimize_focused_prelight.xpm  minimize_focused_pressed.xpm  minimize_unfocused.xpm  unmaximize_focused_normal.xpm  unmaximize_focused_prelight.xpm  unmaximize_focused_pressed.xpm  unmaximize_unfocused.xpm
themes/windowck-dark/xfwm4/: Makefile.am  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  generator.py  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  shade-toggled-pressed.xpm  (+23 more)
themes/windowck/unity/: Makefile.am  close_focused_normal.xpm  close_focused_prelight.xpm  close_unfocused.xpm  generator.py  maximize_focused_normal.xpm  maximize_focused_prelight.xpm  maximize_focused_pressed.xpm  maximize_unfocused.xpm  menu_focused_normal.xpm  menu_focused_prelight.xpm  menu_focused_pressed.xpm  menu_unfocused.xpm  minimize_focused_normal.xpm  minimize_focused_prelight.xpm  minimize_focused_pressed.xpm  minimize_unfocused.xpm  unmaximize_focused_normal.xpm  unmaximize_focused_prelight.xpm  unmaximize_focused_pressed.xpm  unmaximize_unfocused.xpm
themes/windowck/xfwm4/: Makefile.am  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  generator.py  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-prelight.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-prelight.xpm  shade-pressed.xpm  shade-toggled-active.xpm  shade-toggled-inactive.xpm  shade-toggled-prelight.xpm  shade-toggled-pressed.xpm  (+23 more)
