themedir = $(datadir)/themes/elementary/windowck

theme_DATA = 								\
	README								\
	themerc								\
	close-active.png						\
	close-inactive.png						\
	close-prelight.png						\
	close-pressed.png						\
	hide-active.png							\
	hide-inactive.png						\
	hide-prelight.png						\
	hide-pressed.png						\
	maximize-active.png						\
	maximize-inactive.png						\
	maximize-prelight.png						\
	maximize-pressed.png	

EXTRA_DIST = $(theme_DATA)
